Fix an issue with selectize input spacing
When you were typing the first selectize element, the input wasn't padded properly.  This addresses that issue.

--- a/MillimanAccessPortal/MillimanAccessPortal/wwwroot/css/map_modules/_selectize_overrides.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/wwwroot/css/map_modules/_selectize_overrides.scss
@@ -8,6 +8,12 @@ div.selectize-input {
     box-shadow: none;
     -webkit-box-shadow: none;
 
+    input {
+        font-size: 1em !important;
+        margin: .25em !important;
+        padding-top: .25em;
+    }
+
     &:focus {
         border: solid 1px $blue;
     }
